# AutoCode

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
acmgo_agent/: .env.example  README.md  __init__.py  pyproject.toml
acmgo_agent/agent/: __init__.py
acmgo_agent/agent/core/: __init__.py  agent.py  state.py  workflow.py
acmgo_agent/agent/prompts/: __init__.py  examples.py  stages.py  system.py
acmgo_agent/agent/providers/: __init__.py  anthropic.py  base.py  factory.py  litellm.py  openai.py
acmgo_agent/agent/tools/: __init__.py  base.py  compiler.py  file_ops.py  polygon_packer.py  stress_test.py  test_generator.py
acmgo_agent/cli/: __init__.py  main.py
acmgo_agent/config/: __init__.py  settings.py
acmgo_agent/templates/: cleanup.py  gen_tests.py  problem.xml  stress.py
agents/: autocode-workflow.md
autocode_mcp/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
autocode_mcp/.github/workflows/: ci.yml
autocode_mcp/src/autocode_mcp/: __init__.py  server.py
autocode_mcp/src/autocode_mcp/prompts/: __init__.py
autocode_mcp/src/autocode_mcp/resources/: __init__.py
autocode_mcp/src/autocode_mcp/tools/: __init__.py  base.py  checker.py  file_ops.py  generator.py  interactor.py  problem.py  solution.py  stress_test.py  validator.py
autocode_mcp/src/autocode_mcp/utils/: __init__.py  compiler.py
autocode_mcp/tests/: test_prompts.py  test_resources.py  test_server.py
autocode_mcp/tests/test_tools/: test_checker.py  test_file_ops.py  test_generator.py  test_interactor.py  test_problem.py  test_solution.py  test_stress_test.py  test_validator.py
docs/: agent_design.md
hooks/: hooks.json
scripts/: workflow_guard.py
skills/autocode-workflow/: SKILL.md
src/autocode_mcp/: __init__.py  server.py
src/autocode_mcp/prompts/: __init__.py
src/autocode_mcp/templates/: autocode.json  checker_template.cpp  generator_template.cpp  interactor_template.cpp  validator_template.cpp
src/autocode_mcp/tools/: __init__.py  checker.py  complexity.py  generator.py  interactor.py  mixins.py  problem.py  solution.py  stress_test.py  test_verify.py  validation.py  validator.py
src/autocode_mcp/utils/: compiler.py  win_job.py
src/autocode_mcp/workflow/: models.py
tests/: README.md  test_compiler.py  test_e2e_mcp.py  test_packaging.py  test_packaging_smoke.py  test_plugin_manifest.py  test_server.py  test_validation.py  test_workflow_guard.py
tests/test_integration/: test_problem_workflow.py  test_stress_test.py
tests/test_tools/: test_file_ops.py  test_generator.py  test_interactor.py  test_problem.py  test_solution.py  test_stress_test.py
